# citrature

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 3b2478be7244_initial_migration_with_pgvector_.py
citrature/: __init__.py  celery_app.py  config.py  config_simple.py  main.py  models.py  storage.py
citrature/api/: __init__.py  auth.py  graph.py
citrature/schemas/: chat.py  collections.py
citrature/services/: crossref.py  embeddings.py  openrouter.py
citrature/tasks/: ingest.py
docs/: CITRATURE.md  CONFIGURATION.md  Citrature Implementation Plan.md  GOOGLE_OAUTH_SETUP.md  IMPLEMENTATION.md  IMPLEMENTATION_STEP_1.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  RESTRUCTURE.md
frontend/: .env.example  Dockerfile  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: ChatInterface.js  CollectionView.js  Dashboard.js  FileUpload.js  GapAnalysis.js  GraphView.js  Landing.js  Login.js  TopicSearch.js
scripts/: verify_startup.sh
services/api/: Dockerfile  main.py  requirements.txt
services/api/routes/: chat.py  collections.py  ingest.py  search.py
services/beat/: Dockerfile  beat.py  requirements.txt
services/worker/: Dockerfile  requirements.txt  worker.py
services/worker/tasks/: analysis.py  graph.py
shared/: alembic.ini  config.py  config_simple.py  database.py
shared/alembic/: env.py  env.py.bak
shared/clients/: grobid.py
shared/schemas/: auth.py
